<?xml version="1.0"?>
<package format="2">
  <name>easondrone_station</name>
  <version>1.2.0</version>
  <description>
    The easondrone_station package
  </description>

  <maintainer email="12010508@mail.sustech.edu.cn">Eason Hua</maintainer>
  <author email="fatmoonqyp@126.com">Yuhua Qi</author>

  <license>Apache</license>

  <url type="repository">https://github.com/HuaYuXiao/EasonDrone_Station.git</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
